--- a/index2.html
+++ b/index2.html
@@ -1,19 +1,107 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Green Shadow</title>
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/vehicle.css">
 </head>
+
 <body>
+<!--nav bar-->
+<section class="wrapper">
+    <aside id="sidebar">
+        <div class="d-flex">
+            <button class="toggle-btn" type="button">
+                <i class="lni lni-grid-alt"></i>
+            </button>
+            <div class="sidebar-logo">
+                <a href="#">GreenShadow</a>
+            </div>
+        </div>
+        <ul class="sidebar-nav">
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-link" id="dashboard-click">
+                    <i class="fas fa-tachometer-alt"></i>
+                    <span>Dashboard</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-link" id="crops-click">
+                    <i class="fas fa-seedling"></i>
+                    <span>Crops</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-link" id="fields-click">
+                    <i class="fas fa-tractor"></i>
+                    <span>Fields</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-link" id="logs-click">
+                    <i class="fas fa-clipboard-list"></i>
+                    <span>Logs</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-link" id="equipment-click">
+                    <i class="fas fa-tools"></i>
+                    <span>Equipment</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a class="sidebar-link" id="vehicle-click">
+                    <i class="fa-solid fa-car"></i>
+                    <span>Vehicles</span>
+                </a>
+            </li>
+            <li class="sidebar-item">
+                <a href="#" class="sidebar-link" id="user-click">
+                    <i class="fas fa-users"></i>
+                    <span>Users</span>
+                </a>
+            </li>
+        </ul>
+        <div class="sidebar-footer">
+            <a href="#" class="sidebar-link" id="logOut-click">
+                <i class="fas fa-sign-out-alt"></i>
+                <span>Logout</span>
+            </a>
+        </div>
+    </aside>
+
+    <!-- Main content area -->
+    <div class="main p-3" id="main-section">
+        <div class="text-center">
+            <h1>Sidebar Bootstrap 5</h1>
+        </div>
+    </div>
+</section>
+
+<!--<section id="main-sec" style="display:none;">
+    <div class="container mt-4">
+        &lt;!&ndash; Content of the vehicle section... &ndash;&gt;
+    </div>
+</section>-->
+
+
+<!--vehicle form-->
 <section id="vehicle-sec">
     <div class="container mt-4">
         <!-- Search bar -->
         <div class="mb-3">
             <div class="input-group mb-5" style="height: 45px">
-                <input type="text" class="form-control rounded-searchbar" placeholder="Search logs..." aria-label="Search">
+                <input type="text" class="form-control rounded-searchbar" placeholder="Search logs..."
+                       aria-label="Search">
             </div>
         </div>
         <div class="table-container">
@@ -22,8 +110,12 @@
             </div>
             <!-- Buttons aligned to the right -->
             <div class="d-flex ms-auto gap-2 mb-3" style="width: 40%; justify-content: end;">
-                <button class="btn btn-success flex-grow-1" data-bs-toggle="modal" data-bs-target="#vehicle-modal" data-action="add">New</button>
-                <button class="btn btn-primary flex-grow-1" data-bs-toggle="modal" data-bs-target="#updateVehicle-modal" data-action="update">Update</button>
+                <button class="btn btn-success flex-grow-1" data-bs-toggle="modal" data-bs-target="#vehicle-modal"
+                        data-action="add">New
+                </button>
+                <button class="btn btn-primary flex-grow-1" data-bs-toggle="modal" data-bs-target="#updateVehicle-modal"
+                        data-action="update">Update
+                </button>
             </div>
 
             <div class="table-responsive">
@@ -53,7 +145,8 @@
                 <div class="modal-content" style="background-color: #2b2b2b;">
                     <div class="modal-header">
                         <h5 class="modal-title" id="modalTitle">Add Vehicle</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter: invert(1);"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                                style="filter: invert(1);"></button>
                     </div>
                     <div class="modal-body p-4">
                         <form id="vehicleForm">
@@ -62,14 +155,16 @@
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="licensePlateNumber" class="form-control">
-                                        <label for="licensePlateNumber" class="form-label" style="margin-left: 0;">License Plate Number</label>
+                                        <label for="licensePlateNumber" class="form-label" style="margin-left: 0;">License
+                                            Plate Number</label>
                                     </div>
                                 </div>
                                 <!-- Vehicle Name -->
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="vehicleName" class="form-control">
-                                        <label for="vehicleName" class="form-label" style="margin-left: 0;">Vehicle Name</label>
+                                        <label for="vehicleName" class="form-label" style="margin-left: 0;">Vehicle
+                                            Name</label>
                                     </div>
                                 </div>
                             </div>
@@ -77,8 +172,9 @@
                                 <!-- Category -->
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
-                                        <input type="text" id="category" class="form-control" >
-                                        <label for="category" class="form-label" style="margin-left: 0;">Category</label>
+                                        <input type="text" id="category" class="form-control">
+                                        <label for="category" class="form-label"
+                                               style="margin-left: 0;">Category</label>
                                         <div class="form-notch">
                                             <div class="form-notch-leading" style="width: 9px;"></div>
                                             <div class="form-notch-middle" style="width: 68.8px;"></div>
@@ -90,7 +186,8 @@
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="fuelType" class="form-control">
-                                        <label for="fuelType" class="form-label" style="margin-left: 0;">Fuel Type</label>
+                                        <label for="fuelType" class="form-label" style="margin-left: 0;">Fuel
+                                            Type</label>
                                     </div>
                                 </div>
                             </div>
@@ -106,7 +203,8 @@
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="staffMember" class="form-control">
-                                        <label for="staffMember" class="form-label" style="margin-left: 0;">Staff Member</label>
+                                        <label for="staffMember" class="form-label" style="margin-left: 0;">Staff
+                                            Member</label>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +217,9 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-success" form="vehicleForm" id="modalSubmitButton">Add Vehicle</button>
+                                <button type="submit" class="btn btn-success" form="vehicleForm" id="modalSubmitButton">
+                                    Add Vehicle
+                                </button>
                             </div>
                         </form>
                     </div>
@@ -132,7 +232,8 @@
                 <div class="modal-content" style="background-color: #2b2b2b;">
                     <div class="modal-header">
                         <h5 class="modal-title" id="updateModalTitle">Update Vehicle</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter: invert(1);"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                                style="filter: invert(1);"></button>
                     </div>
                     <div class="modal-body p-4">
                         <form id="updateVehicleForm">
@@ -141,14 +242,16 @@
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="updateLicensePlateNumber" class="form-control">
-                                        <label for="updateLicensePlateNumber" class="form-label" style="margin-left: 0;">License Plate Number</label>
+                                        <label for="updateLicensePlateNumber" class="form-label"
+                                               style="margin-left: 0;">License Plate Number</label>
                                     </div>
                                 </div>
                                 <!-- Vehicle Name -->
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="updateVehicleName" class="form-control">
-                                        <label for="updateVehicleName" class="form-label" style="margin-left: 0;">Vehicle Name</label>
+                                        <label for="updateVehicleName" class="form-label" style="margin-left: 0;">Vehicle
+                                            Name</label>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +259,7 @@
                                 <!-- Category -->
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
-                                        <input type="text" id="updateCategoryVehicle" class="form-control" >
+                                        <input type="text" id="updateCategoryVehicle" class="form-control">
                                         <label for="updateCategoryVehicle" class="form-label" style="margin-left: 0;">Category</label>
                                         <div class="form-notch">
                                             <div class="form-notch-leading" style="width: 9px;"></div>
@@ -169,7 +272,8 @@
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="updateFuelType" class="form-control">
-                                        <label for="updateFuelType" class="form-label" style="margin-left: 0;">Fuel Type</label>
+                                        <label for="updateFuelType" class="form-label" style="margin-left: 0;">Fuel
+                                            Type</label>
                                     </div>
                                 </div>
                             </div>
@@ -178,14 +282,16 @@
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="updateStatus" class="form-control">
-                                        <label for="updateStatus" class="form-label" style="margin-left: 0;">Status</label>
+                                        <label for="updateStatus" class="form-label"
+                                               style="margin-left: 0;">Status</label>
                                     </div>
                                 </div>
                                 <!-- Staff Member -->
                                 <div class="col-md-6">
                                     <div class="form-outline" data-mdb-input-init="" data-mdb-input-initialized="true">
                                         <input type="text" id="updateStaffMember" class="form-control">
-                                        <label for="updateStaffMember" class="form-label" style="margin-left: 0;">Staff Member</label>
+                                        <label for="updateStaffMember" class="form-label" style="margin-left: 0;">Staff
+                                            Member</label>
                                     </div>
                                 </div>
                             </div>
@@ -198,7 +304,9 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-success" form="vehicleForm" id="modalSubmitButtonUpdate">Update Vehicle</button>
+                                <button type="submit" class="btn btn-success" form="vehicleForm"
+                                        id="modalSubmitButtonUpdate">Update Vehicle
+                                </button>
                             </div>
                         </form>
                     </div>
@@ -206,18 +314,22 @@
             </div>
         </div>
         <!-- Delete Confirmation Modal -->
-        <div class="modal fade" id="confirmVehicleDeleteModal" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+        <div class="modal fade" id="confirmVehicleDeleteModal" tabindex="-1" role="dialog"
+             aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content bg-dark text-white"> <!-- Apply dark theme classes -->
                     <div class="modal-header">
                         <h5 class="modal-title" id="confirmVehicleDeleteModalLabel">Confirm Deletion</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" style="filter: invert(1);"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                                style="filter: invert(1);"></button>
                     </div>
                     <div class="modal-body">
                         Are you sure you want to delete this record?
                     </div>
                     <div class="modal-footer">
-                        <button type="button" id="confirmVehicleDeleteNo" class="btn btn-secondary" data-dismiss="modal">No</button>
+                        <button type="button" id="confirmVehicleDeleteNo" class="btn btn-secondary"
+                                data-dismiss="modal">No
+                        </button>
                         <button type="button" id="confirmVehicleDeleteYes" class="btn btn-danger">Yes</button>
                     </div>
                 </div>
@@ -225,8 +337,10 @@
         </div>
     </div>
 </section>
-</body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+<script src="assets/lib/jquery-3.7.1.min.js"></script>
+<script src="assets/js/main.js"></script>
+</body>
 </html>
