--- a/staff.html
+++ b/staff.html
@@ -3,169 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Modal Form</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/dashboard.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <title>Bootstrap Sidebar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        #sidebar {
+            min-height: 100vh;
+        }
+        #main-content {
+            flex-grow: 1;
+        }
+    </style>
 </head>
 <body>
-<div class="main">
-    <div class="details">
-        <div class="recentOrders">
-            <div class="cardHeader">
-                <h2>Crop Details</h2>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cropModal">
-                    Add New Staff
-                </button>
-            </div>
 
-            <table>
-                <thead>
-                <tr>
-                    <td>Staff id</td>
-                    <td>Staff Name</td>
-                    <td>Designation</td>
-                    <td>Address</td>
-                    <td>Joined Date</td>
-                    <td>Email</td>
-                    <td>Role</td>
-                </tr>
-                </thead>
-
-                <tbody>
-                <tr>
-                    <td>Star Refrigerator</td>
-                    <td>$1200</td>
-                    <td>Paid</td>
-                    <td><span class="status delivered">Delivered</span></td>
-                </tr>
-
-                <tr>
-                    <td>Dell Laptop</td>
-                    <td>$110</td>
-                    <td>Due</td>
-                    <td><span class="status pending">Pending</span></td>
-                </tr>
-
-                <tr>
-                    <td>Apple Watch</td>
-                    <td>$1200</td>
-                    <td>Paid</td>
-                    <td><span class="status return">Return</span></td>
-                </tr>
-
-                <tr>
-                    <td>Addidas Shoes</td>
-                    <td>$620</td>
-                    <td>Due</td>
-                    <td><span class="status inProgress">In Progress</span></td>
-                </tr>
-
-                <tr>
-                    <td>Star Refrigerator</td>
-                    <td>$1200</td>
-                    <td>Paid</td>
-                    <td><span class="status delivered">Delivered</span></td>
-                </tr>
-
-                <tr>
-                    <td>Dell Laptop</td>
-                    <td>$110</td>
-                    <td>Due</td>
-                    <td><span class="status pending">Pending</span></td>
-                </tr>
-
-                <tr>
-                    <td>Apple Watch</td>
-                    <td>$1200</td>
-                    <td>Paid</td>
-                    <td><span class="status return">Return</span></td>
-                </tr>
-
-                <tr>
-                    <td>Addidas Shoes</td>
-                    <td>$620</td>
-                    <td>Due</td>
-                    <td><span class="status inProgress">In Progress</span></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-
-<!-- staff Modal -->
-<div class="modal fade" id="cropModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+<!-- Staff Modal -->
+<div  id="staffModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Add Staff Information</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form id="cropForm">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="staffId">Staff ID</label>
-                            <input type="text" class="form-control" id="staffId" placeholder="Enter staff id"
-                                   required>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="staffId" class="form-label">Staff ID</label>
+                            <input type="text" class="form-control" id="staffId" placeholder="Enter staff id" required>
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="staffName">Name</label>
-                            <input type="text" class="form-control" id="staffName" placeholder="EnterName" required>
+                        <div class="col-md-6">
+                            <label for="staffName" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="staffName" placeholder="Enter name" required>
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="designation">Designation</label>
-                            <input type="text" class="form-control" id="designation" placeholder="Enter designation"
-                                   required>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="designation" class="form-label">Designation</label>
+                            <input type="text" class="form-control" id="designation" placeholder="Enter designation" required>
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="gender">Gender</label>
+                        <div class="col-md-6">
+                            <label for="gender" class="form-label">Gender</label>
                             <input type="text" class="form-control" id="gender" placeholder="Enter gender" required>
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="dob">DOB</label>
-                            <input type="date" class="form-control" id="dob" placeholder="Enter date of birth"
-                                   required>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="dob" class="form-label">DOB</label>
+                            <input type="date" class="form-control" id="dob" required>
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="joinedDate">Joined Date</label>
-                            <input type="date" class="form-control" id="joinedDate" placeholder="Enter joined date"
-                                   required>
+                        <div class="col-md-6">
+                            <label for="joinedDate" class="form-label">Joined Date</label>
+                            <input type="date" class="form-control" id="joinedDate" required>
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="role">Role</label>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="role" class="form-label">Role</label>
                             <input type="text" class="form-control" id="role" placeholder="Enter job role" required>
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="email">Email</label>
-                            <input type="text" class="form-control" id="email" placeholder="Enter email" required>
+                        <div class="col-md-6">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" required>
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="address">Address</label>
-                            <input type="text" class="form-control" id="address" placeholder="Enter address"
-                                   required>
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <label for="address" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="address" placeholder="Enter address" required>
                         </div>
                     </div>
 
                     <!-- Submit Button -->
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                         <button type="submit" class="btn btn-primary">Save</button>
                     </div>
                 </form>
@@ -173,19 +87,16 @@
         </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>-->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    // Handle form submission (this can be adapted for your backend)
-    document.getElementById('cropForm').addEventListener('submit', function (event) {
-        event.preventDefault();
-        // Here you would collect form data and send it to your server or process it
-        alert('Crop information submitted!');
-        // Close the modal
-        $('#cropModal').modal('hide');
-    });
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // Example script for handling sidebar toggle (if needed for sidebar as well)
+    document.getElementById("sidebarToggle").addEventListener("click", function () {
+        document.getElementById("sidebar").classList.toggle("d-none");
+    });
 </script>
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
